--- a/src/components/styles/pomodro.css
+++ b/src/components/styles/pomodro.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
 @media (orientation: landscape) and (min-width: 720px) {
   .pomodroMainContainer {
     height: 500px;
@@ -9,7 +17,7 @@
     background-color: #3AB4CD;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: column;
     border-radius: 25px;
     background: #3AB4CD;
@@ -17,6 +25,7 @@
   }
 
   .timerCountdownLabel {
+    margin-bottom: 20px;
     color: #000;
     font-family: "Oswald", sans-serif;
     font-size: 48px;
@@ -29,8 +38,9 @@
     height: 300px;
     width: 300px;
     border-radius: 100%;
-    background-color: #F09D3B;
-    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #eb993c;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25) inset;
+    border: 1px solid #CCCCCC;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -49,10 +59,78 @@
   .indicator {
     height: 50%;
     width: 2px;
-    background-color: #FEEE63;
+    /* background-color: #FEEE63; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform-origin: bottom;
     }
+
+    .menuBtnContainer {
+      padding: 0px 40px;
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+    }
+
+    .menuBtn {
+      align-self: left;
+    }
+
+    .pomodroMenuContainer {
+      height: fit-content;
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    .timeInputContainer {
+      padding: 6px 12px;
+      border-radius: 10px;
+      box-shadow: 1.5px 1.5px 8px 1px #252525 inset;
+      border: 1px solid #CCCCCC;
+      width: 60px;
+      font-family: "Rubik", sans-serif;
+      text-align: center;
+      font-weight: 600;
+
+    }
+
+    .timeInputContainer:focus{
+      outline: none;
+    }
+
+    .timeSubmitBtn {
+      padding: 3px 12px;
+      border-radius: 12px;
+      background-color: #CCCCCC;
+      margin-left: 20px;
+      border: 1px solid #CCCCCC;
+      box-shadow: 2px 2px 10px 1px #252525;
+    }
+
+    .timeSubmitBtn:active {
+      transform: scale(0.95);
+      transition: transform 0.3s ease-in;
+    }
+
+    .timeSubmitBtnLabel {
+      font-family: "Rubik", sans-serif;
+      font-size: 16px;
+      font-weight: 600;
+      color: #252525;
+    }
+
+    .pauseBtnContainer {
+      margin-left: 20px;
+    }
+
+    .pauseBtnContainer:focus {
+      transform: scale(0.95);
+      translate: transform 0.5s ease-in;
+    }
+
 }
