--- a/src/components/styles/musicplayer.css
+++ b/src/components/styles/musicplayer.css
@@ -6,7 +6,7 @@
     .musicMainContainer {
         width: 45%;
         height: 500px;
-        padding: 25px;
+        padding: 10px 25px;
         border-radius: 25px;
         background: #DC8AFA;
         box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
@@ -40,12 +40,12 @@
 
     .musicTitleSelectContainer{
         font-family: "Poppins", sans-serif;
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 800;
         line-height: normal;
         border-radius: 10px;
-        padding: 6px 12px;
+        padding: 6px 6px;
         color: #DC8AFA;
         background-image: linear-gradient(90deg, #030637, #3C0753, #720455, #910A67);
     }
@@ -56,7 +56,7 @@
 
     .optionMusicLabel {
         font-family: "Poppins", sans-serif;
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 800;
         line-height: normal;
@@ -67,11 +67,25 @@
         height: fit-content;
         width: fit-content;
         border-radius: 100%;
-        padding: 15px 15px 15px 18px;
+        padding: 7px 7px 7px 10px;
         background-image: linear-gradient(45deg, #030637, #3C0753, #720455, #910A67);
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .musicPlayedContainer {
+        width: 80%;
+        height: fit-content;
+        padding: 4px;
+    }
+
+    .musicPlayedLength {
+        width: 100%;
+        height: 16px;
+        background-image: linear-gradient(45deg, #80BCBD, #AAD9BB, #D5F0C1, #F9F7C9);
+        border-radius: 50px;
+        border: 2px solid #CCCCCC;
     }
 
 }
