--- a/src/components/styles/pomodro.css
+++ b/src/components/styles/pomodro.css
@@ -14,24 +14,26 @@ input[type=number]::-webkit-outer-spin-button {
   .pomodroMainContainer {
     height: 500px;
     width: 45%;
-    background-color: #3AB4CD;
+    background-color: rgb(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     border-radius: 25px;
-    background: #3AB4CD;
     box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
   }
 
   .timerCountdownLabel {
+    margin-top: 10px;
     margin-bottom: 20px;
-    color: #000;
-    font-family: "Oswald", sans-serif;
-    font-size: 48px;
+    color: #a8a4a4;
+    font-family: "Rubik", sans-serif;
+    font-size: 36px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    opacity: 0.8;
+    text-shadow: 0 0 3px #000, 0 0 5px #252525;
   }
 
   .circularTimer {
@@ -91,6 +93,7 @@ input[type=number]::-webkit-outer-spin-button {
       padding: 6px 12px;
       border-radius: 10px;
       box-shadow: 1.5px 1.5px 8px 1px #252525 inset;
+      background-color: rgba(255, 255, 255, 0.25);
       border: 1px solid #CCCCCC;
       width: 60px;
       font-family: "Rubik", sans-serif;
@@ -106,7 +109,7 @@ input[type=number]::-webkit-outer-spin-button {
     .timeSubmitBtn {
       padding: 3px 12px;
       border-radius: 12px;
-      background-color: #CCCCCC;
+      background-color: rgba(255, 255, 255, 0.25);
       margin-left: 20px;
       border: 1px solid #CCCCCC;
       box-shadow: 2px 2px 10px 1px #252525;
