--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -4,6 +4,123 @@
 
 @media (orientation: landscape) and (min-width: 720px){
     .mainDashboardContainer {
-        
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .sideBar {
+        width: 20%;
+        height: 100vh;
+        background-image: linear-gradient(45deg, #FFD0EC, #81689D);
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .profileContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: fit-content;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pfpImage {
+        border-radius: 100%;
+    }
+
+    .profileNameLabel {
+        font-family: "Rubik", sans-serif;
+        font-size: 18px;
+        font-weight: 600;
+        color: #252525;
+        margin-top: 12px;
+    }
+
+    .separatorDiv {
+        width: 100%;
+        height: 2px;
+        background-color: #1F2544;
+        margin: 8px 0px;
+    }
+
+    .optionsContainer {
+        margin-top: 0px;
+        padding: 6px;
+    }
+
+    .optionsList li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 20px 0px;
+    }
+
+    .optionsTextLabel {
+        font-family: "Rubik", sans-serif;
+        font-size: 18px;
+        font-weight: 500;
+        color: #252525;
+        margin-left: 12px;
+    }
+
+    .widgetContainer {
+        display: flex;
+        flex-direction: column;
+        margin-top: 8px;
+    }
+
+    .widgetLabel {
+        font-family: "Oswald", sans-serif;
+        font-size: 22px;
+        text-align: center;
+        font-weight: 600;
+    }
+
+    .mainDashboardArea {
+        background-image: url("/indexBg.jpeg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        padding: 25px 50px;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .toDoContainer {
+        height: 80%;
+        width: 40%;
+        border-radius: 25px;
+        background-color: #9DBC98;
+        box-shadow: 2px 2px 10px 2px #252525 inset;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .analyticsContainer {
+        height: 80%;
+        width: 40%;
+        border-radius: 25px;
+        background-color: #FFF8E3;
+        box-shadow: 2px 2px 10px 2px #252525 inset;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .subHeadingLabel {
+        font-family: "Rubik", sans-serif;
+        font-size: 30px;
+        font-weight: 600;
+        color: #252525;
+        text-align: center;
+        text-decoration: underline;
     }
 }
